--- a/administer/accounts-teams.mdx
+++ b/administer/accounts-teams.mdx
@@ -134,10 +134,10 @@ spec:
 <Tab title="API" id="list-teams-api">
 
 To list all teams with the Chronosphere API, use the
-[`ListTeams`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListTeams) endpoint.
+[`ListTeams`](/tooling/api-info/definition/operations/ListTeams) endpoint.
 
 To view a single team, use the
-[`ReadTeams`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadTeams) endpoint.
+[`ReadTeams`](/tooling/api-info/definition/operations/ReadTeams) endpoint.
 
 <ApiAuthReq />
 
