--- a/administer/limits-licensing/limits/event-limits.mdx
+++ b/administer/limits-licensing/limits/event-limits.mdx
@@ -6,7 +6,7 @@ sidebarTitle: Events
 
 
 In addition to using Chronosphere Observability Platform, you can use the
-[CreateEvent API](https://docs.chronosphere.io/tooling/api-info/data_definition/operations/CreateEvent)
+[CreateEvent API](/tooling/api-info/data_definition/operations/CreateEvent)
 to create change events. This API can ingest 300 change events per minute, per block
 in a single tenant. The total request size must be less than 1&nbsp;MB.
 
