--- a/control/consumption/datasets.mdx
+++ b/control/consumption/datasets.mdx
@@ -66,7 +66,7 @@ display.
 <Tab title="API" id="view-datasets-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListDatasets`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListDatasets)
+[`ListDatasets`](/tooling/api-info/definition/operations/ListDatasets)
 endpoint.
 
 To return only log datasets, specify `type=LOGS` in the URL of your API call.
@@ -163,7 +163,7 @@ dataset resource.
 <Tab title="API" id="create-a-dataset-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateDataset`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateDataset)
+[`CreateDataset`](/tooling/api-info/definition/operations/CreateDataset)
 endpoint.
 
 <ApiAuthReq />
@@ -276,7 +276,7 @@ To edit datasets using [Terraform](/tooling/infrastructure/terraform):
 <Tab title="API" id="update-a-dataset-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateDataset`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateDataset) endpoint.
+[`UpdateDataset`](/tooling/api-info/definition/operations/UpdateDataset) endpoint.
 
 <ApiAuthReq />
 
@@ -316,7 +316,7 @@ chronoctl datasets delete log-shopping-service-production
 <Tab title="API" id="delete-a-dataset-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteDataset`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteDataset) endpoint.
+[`DeleteDataset`](/tooling/api-info/definition/operations/DeleteDataset) endpoint.
 
 <ApiAuthReq />
 
