--- a/control/consumption/partitions.mdx
+++ b/control/consumption/partitions.mdx
@@ -95,7 +95,7 @@ chronoctl consumption-config read
 <Tab title="API" id="view-partitions-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListConsumptionBudgets`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListConsumptionBudgets)
+[`ListConsumptionBudgets`](/tooling/api-info/definition/operations/ListConsumptionBudgets)
 endpoint.
 
 <ApiAuthReq />
@@ -163,7 +163,7 @@ partition resource.
 <Tab title="API" id="create-partitions-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateConsumptionBudget`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateConsumptionBudget)
+[`CreateConsumptionBudget`](/tooling/api-info/definition/operations/CreateConsumptionBudget)
 endpoint.
 
 <ApiAuthReq />
@@ -404,7 +404,7 @@ To edit partitions using [Terraform](/tooling/infrastructure/terraform):
 <Tab title="API" id="update-a-partition-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateConsumptionBudget`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateConsumptionBudget)
+[`UpdateConsumptionBudget`](/tooling/api-info/definition/operations/UpdateConsumptionBudget)
 endpoint.
 
 <ApiAuthReq />
@@ -445,7 +445,7 @@ chronoctl consumption-config delete ordering-service-production
 <Tab title="API" id="delete-a-partition-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteConsumptionBudget`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteConsumptionBudget)
+[`DeleteConsumptionBudget`](/tooling/api-info/definition/operations/DeleteConsumptionBudget)
 endpoint.
 
 <ApiAuthReq />
