--- a/control/consumption/shape-logs/parse-logs.mdx
+++ b/control/consumption/shape-logs/parse-logs.mdx
@@ -68,7 +68,7 @@ parser's Terraform representation.
 <Tab title="API" id="view-parsers-api">
 
 To complete this action with the Chronosphere API, use the
-[`ReadLogIngestConfig`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadLogIngestConfig)
+[`ReadLogIngestConfig`](/tooling/api-info/definition/operations/ReadLogIngestConfig)
 endpoint.
 
 <ApiAuthReq />
@@ -194,7 +194,7 @@ To create a plain text parser with [Terraform](/tooling/infrastructure/terraform
 <Tab title="API" id="create-parsers-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateLogIngestConfig`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateLogIngestConfig)
+[`CreateLogIngestConfig`](/tooling/api-info/definition/operations/CreateLogIngestConfig)
 endpoint.
 
 Use the `plaintext_parsers` object to define the plain text parser to run against your log
@@ -305,7 +305,7 @@ To create a plain text parser with [Terraform](/tooling/infrastructure/terraform
 <Tab title="API" id="create-field-parsers-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateLogIngestConfig`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateLogIngestConfig)
+[`CreateLogIngestConfig`](/tooling/api-info/definition/operations/CreateLogIngestConfig)
 endpoint.
 
 Use the `field_parsers` object to define the field parser to run against your log data.
@@ -379,7 +379,7 @@ Terraform representation.
 <Tab title="API" id="edit-parsers-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateLogIngestConfig`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateLogIngestConfig)
+[`UpdateLogIngestConfig`](/tooling/api-info/definition/operations/UpdateLogIngestConfig)
 endpoint.
 
 <ApiAuthReq />
@@ -426,7 +426,7 @@ chronoctl log-ingest-config delete
 <Tab title="API" id="delete-parsers-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteLogIngestConfig`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteLogIngestConfig)
+[`DeleteLogIngestConfig`](/tooling/api-info/definition/operations/DeleteLogIngestConfig)
 endpoint.
 
 <ApiAuthReq />
