--- a/control/sampling/datasets.mdx
+++ b/control/sampling/datasets.mdx
@@ -124,7 +124,7 @@ dataset's Terraform representation.
 <Tab title="API" id="view-datasets-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListDatasets`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListDatasets)
+[`ListDatasets`](/tooling/api-info/definition/operations/ListDatasets)
 endpoint.
 
 <ApiAuthReq />
@@ -262,7 +262,7 @@ dataset resource.
 <Tab title="API" id="create-a-dataset-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateDataset`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateDataset)
+[`CreateDataset`](/tooling/api-info/definition/operations/CreateDataset)
 endpoint.
 
 <ApiAuthReq />
@@ -586,7 +586,7 @@ behavior definition.
 <Tab title="API" id="assign-a-behavior-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateTraceBehaviorConfig`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateTraceBehaviorConfig)
+[`UpdateTraceBehaviorConfig`](/tooling/api-info/definition/operations/UpdateTraceBehaviorConfig)
 endpoint.
 
 <ApiAuthReq />
@@ -734,7 +734,7 @@ Terraform representation.
 <Tab title="API" id="edit-a-dataset-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateDataset`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateDataset) endpoint.
+[`UpdateDataset`](/tooling/api-info/definition/operations/UpdateDataset) endpoint.
 
 <ApiAuthReq />
 
@@ -797,7 +797,7 @@ chronoctl datasets delete infra-example-dataset
 <Tab title="API" id="delete-a-dataset-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteDataset`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteDataset) endpoint.
+[`DeleteDataset`](/tooling/api-info/definition/operations/DeleteDataset) endpoint.
 
 <ApiAuthReq />
 
