--- a/control/sampling/tail-sampling.mdx
+++ b/control/sampling/tail-sampling.mdx
@@ -78,7 +78,7 @@ chronoctl trace-tail-sampling-rules read
 <Tab title="API" id="view-tail-sampling-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`ReadTraceTailSamplingRules`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadTraceTailSamplingRules)
+[`ReadTraceTailSamplingRules`](/tooling/api-info/definition/operations/ReadTraceTailSamplingRules)
 endpoint.
 
 <ApiAuthReq />
@@ -114,7 +114,7 @@ traces, and a rate of `1` keeps all traces matching the defined filter. A sampli
 rate of `.5` drops half of all traces matching the filter, and keeps the other half.
 
 For a complete list of supported fields for tail sampling rules, see the
-[CreateTraceTailSamplingRules endpoint](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateTraceTailSamplingRules).
+[CreateTraceTailSamplingRules endpoint](/tooling/api-info/definition/operations/CreateTraceTailSamplingRules).
 
 <Tabs>
 <Tab title="Chronoctl" id="tail-sampling-chronoctl">
@@ -199,7 +199,7 @@ Use Terraform to create a rule definition for tail sampling:
 <Tab title="API" id="create-tail-sampling-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateTraceTailSamplingRules`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateTraceTailSamplingRules)
+[`CreateTraceTailSamplingRules`](/tooling/api-info/definition/operations/CreateTraceTailSamplingRules)
 endpoint.
 
 <ApiAuthReq />
@@ -248,7 +248,7 @@ To edit tail sampling rules using [Terraform](/tooling/infrastructure/terraform)
 <Tab title="API" id="edit-tail-sampling-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateTraceTailSamplingRules`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateTraceTailSamplingRules)
+[`UpdateTraceTailSamplingRules`](/tooling/api-info/definition/operations/UpdateTraceTailSamplingRules)
 endpoint.
 
 <ApiAuthReq />
@@ -287,7 +287,7 @@ chronoctl trace-tail-sampling-rules delete tail-sampling-prod
 <Tab title="API" id="delete-tail-sampling-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteTraceTailSamplingRules`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteTraceTailSamplingRules)
+[`DeleteTraceTailSamplingRules`](/tooling/api-info/definition/operations/DeleteTraceTailSamplingRules)
 endpoint.
 
 <ApiAuthReq />
