--- a/control/shaping/quotas/manage-pools.mdx
+++ b/control/shaping/quotas/manage-pools.mdx
@@ -126,7 +126,7 @@ pool resource.
 <Tab title="API" id="create-a-pool-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateResourcePools`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateResourcePools)
+[`CreateResourcePools`](/tooling/api-info/definition/operations/CreateResourcePools)
 endpoint.
 
 <ApiAuthReq />
@@ -388,7 +388,7 @@ To edit a pool using [Terraform](/tooling/infrastructure/terraform):
 <Tab title="API" id="edit-a-pool-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateResourcePools`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateResourcePools) endpoint.
+[`UpdateResourcePools`](/tooling/api-info/definition/operations/UpdateResourcePools) endpoint.
 
 <ApiAuthReq />
 
@@ -531,7 +531,7 @@ This command deletes the _entire_ `ResourcePools` definition.
 <Tab title="API" id="delete-a-pool-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteResourcePools`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteResourcePools)
+[`DeleteResourcePools`](/tooling/api-info/definition/operations/DeleteResourcePools)
 endpoint.
 
 <ApiAuthReq />
