--- a/control/shaping/quotas/quotas-ui.mdx
+++ b/control/shaping/quotas/quotas-ui.mdx
@@ -48,7 +48,7 @@ chronoctl resource-pools read
 <Tab title="API" id="view-pools-api">
 
 To complete this action with the Chronosphere API, use the
-[`ReadResourcePools`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadResourcePools) endpoint.
+[`ReadResourcePools`](/tooling/api-info/definition/operations/ReadResourcePools) endpoint.
 
 <ApiAuthReq />
 
