--- a/control/shaping/rules/evaluation-failures.mdx
+++ b/control/shaping/rules/evaluation-failures.mdx
@@ -87,14 +87,14 @@ count: 5
 message: An internal error occurred.
 ```
 
-See the [List Rule Evaluation](https://docs.chronosphere.io/tooling/api-info/state_definition/operations/ListRuleEvaluations)
+See the [List Rule Evaluation](/tooling/api-info/state_definition/operations/ListRuleEvaluations)
 API documentation to learn more about these individual fields.
 
 </Tab>
 <Tab title="API" id="list-rule-eval-API">
 
 To complete this action with the Chronosphere API, use the
-[`ListRuleEvaluations`](https://docs.chronosphere.io/tooling/api-info/state_definition/operations/ListRuleEvaluations)
+[`ListRuleEvaluations`](/tooling/api-info/state_definition/operations/ListRuleEvaluations)
 endpoint.
 
 <ApiAuthReq />
