--- a/control/shaping/rules/recording.mdx
+++ b/control/shaping/rules/recording.mdx
@@ -75,7 +75,7 @@ Rule fields:
 - `slug`: The slug for the rule. This can't change after
   rule creation.
 
-See the [Recording rule API](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateRecordingRule)
+See the [Recording rule API](/tooling/api-info/definition/operations/CreateRecordingRule)
 for a full definition.
 
 ## Best practices
@@ -139,7 +139,7 @@ chronoctl recording-rules list
 <Tab title="API">
 
 To complete this action with the Chronosphere API, use the
-[`ListRecordingRules`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListRecordingRules) endpoint.
+[`ListRecordingRules`](/tooling/api-info/definition/operations/ListRecordingRules) endpoint.
 
 <ApiAuthReq />
 
@@ -195,7 +195,7 @@ For more information, see the [Terraform recording rule example](#terraform-exam
 <Tab title="API">
 
 To complete this action with the Chronosphere API, use the
-[`CreateRecordingRule`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateRecordingRule) endpoint.
+[`CreateRecordingRule`](/tooling/api-info/definition/operations/CreateRecordingRule) endpoint.
 
 <ApiAuthReq />
 
@@ -311,7 +311,7 @@ To delete a recording rule with [Terraform](/tooling/infrastructure/terraform)):
 <Tab title="API">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteRecordingRule`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteRecordingRule) endpoint.
+[`DeleteRecordingRule`](/tooling/api-info/definition/operations/DeleteRecordingRule) endpoint.
 
 <ApiAuthReq />
 
