--- a/integrate/mcp-server/resources.mdx
+++ b/integrate/mcp-server/resources.mdx
@@ -12,24 +12,24 @@ submit read-only queries to Observability Platform from within your code editor.
 
 | Tool type                                                           | Endpoint                          | Description                     |
 |-------------------------------------------------------------------------|-----------------------------------|---------------------------------|
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadClassicDashboard)     | `get_classic_dashboard`           | Get classic dashboards tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadDashboard)            | `get_dashboard`                   | Get dashboards tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadDropRule)             | `get_drop_rule`                   | Get drop rules tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadMappingRule)          | `get_mapping_rule`                | Get mapping rules tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadMonitor)              | `get_monitor`                     | Get monitors tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadNotificationPolicy)   | `get_notification_policy`         | Get notification policies tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadRecordingRule)        | `get_recording_rule`              | Get recording rules tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadRollupRule)           | `get_rollup_rule`                 | Get rollup rules tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadSLO)                  | `get_slo`                         | Get SLO tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListClassicDashboards)    | `list_classic_dashboards`         | List classic dashboards tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListDashboards)           | `list_dashboards`                 | List dashboards tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListDropRules)            | `list_drop_rules`                 | List drop rules tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListMappingRules)         | `list_mapping_rules`              | List mapping rules tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListMonitors)             | `list_monitors`                   | List monitors tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListNotificationPolicies) | `list_notification_policies`      | List notification policies tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListRecordingRules)       | `list_recording_rules`            | List recording rules tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListRollupRules)          | `list_rollup_rules`               | List rollup rules tools. |
-| [API](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListSLOs)                 | `list_slo`                        | List SLO tools. |
+| [API](/tooling/api-info/definition/operations/ReadClassicDashboard)     | `get_classic_dashboard`           | Get classic dashboards tools. |
+| [API](/tooling/api-info/definition/operations/ReadDashboard)            | `get_dashboard`                   | Get dashboards tools. |
+| [API](/tooling/api-info/definition/operations/ReadDropRule)             | `get_drop_rule`                   | Get drop rules tools. |
+| [API](/tooling/api-info/definition/operations/ReadMappingRule)          | `get_mapping_rule`                | Get mapping rules tools. |
+| [API](/tooling/api-info/definition/operations/ReadMonitor)              | `get_monitor`                     | Get monitors tools. |
+| [API](/tooling/api-info/definition/operations/ReadNotificationPolicy)   | `get_notification_policy`         | Get notification policies tools. |
+| [API](/tooling/api-info/definition/operations/ReadRecordingRule)        | `get_recording_rule`              | Get recording rules tools. |
+| [API](/tooling/api-info/definition/operations/ReadRollupRule)           | `get_rollup_rule`                 | Get rollup rules tools. |
+| [API](/tooling/api-info/definition/operations/ReadSLO)                  | `get_slo`                         | Get SLO tools. |
+| [API](/tooling/api-info/definition/operations/ListClassicDashboards)    | `list_classic_dashboards`         | List classic dashboards tools. |
+| [API](/tooling/api-info/definition/operations/ListDashboards)           | `list_dashboards`                 | List dashboards tools. |
+| [API](/tooling/api-info/definition/operations/ListDropRules)            | `list_drop_rules`                 | List drop rules tools. |
+| [API](/tooling/api-info/definition/operations/ListMappingRules)         | `list_mapping_rules`              | List mapping rules tools. |
+| [API](/tooling/api-info/definition/operations/ListMonitors)             | `list_monitors`                   | List monitors tools. |
+| [API](/tooling/api-info/definition/operations/ListNotificationPolicies) | `list_notification_policies`      | List notification policies tools. |
+| [API](/tooling/api-info/definition/operations/ListRecordingRules)       | `list_recording_rules`            | List recording rules tools. |
+| [API](/tooling/api-info/definition/operations/ListRollupRules)          | `list_rollup_rules`               | List rollup rules tools. |
+| [API](/tooling/api-info/definition/operations/ListSLOs)                 | `list_slo`                        | List SLO tools. |
 | Events                                                                  | `get_events_metadata`             | List properties you can query on events. |
 | Events                                                                  | `list_events`                     | List events from a given query. |
 | Events                                                                  | `list_events_label_values`        | List values for a given label name. |
