--- a/investigate/alerts/monitors.mdx
+++ b/investigate/alerts/monitors.mdx
@@ -113,7 +113,7 @@ view a monitor's Terraform representation.
 <Tab title="API" id="view-available-monitors-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListMonitors`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListMonitors) endpoint.
+[`ListMonitors`](/tooling/api-info/definition/operations/ListMonitors) endpoint.
 
 <ApiAuthReq />
 
@@ -405,7 +405,7 @@ monitor resource.
 <Tab title="API" id="create-a-monitor-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateMonitor`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateMonitor) endpoint.
+[`CreateMonitor`](/tooling/api-info/definition/operations/CreateMonitor) endpoint.
 
 <ApiAuthReq />
 
@@ -1031,7 +1031,7 @@ For details, see [Use the Code Config tool](#use-the-code-config-tool).
 <Tab title="API" id="edit-a-monitor-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateMonitor`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateMonitor) endpoint.
+[`UpdateMonitor`](/tooling/api-info/definition/operations/UpdateMonitor) endpoint.
 
 <ApiAuthReq />
 
@@ -1285,7 +1285,7 @@ chronoctl monitors delete infra-example-monitor
 <Tab title="API" id="deleting-a-monitor-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteMonitor`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteMonitor) endpoint.
+[`DeleteMonitor`](/tooling/api-info/definition/operations/DeleteMonitor) endpoint.
 
 <ApiAuthReq />
 
