--- a/investigate/alerts/monitors/data-model.mdx
+++ b/investigate/alerts/monitors/data-model.mdx
@@ -14,7 +14,7 @@ Chronosphere API.
 
 Whichever method you use to create a monitor, the monitor structure uses the
 following data model. A full list of values is available
-[in the API](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateMonitor).
+[in the API](/tooling/api-info/definition/operations/CreateMonitor).
 
 ```mermaid
 flowchart TD
@@ -189,7 +189,7 @@ defaults to `0s`. How you define the resolve window differs depending on how you
 - Terraform: Define the resolve window with the `resolve_sustain` field in the
   `series_conditions` object.
 - Chronoctl or the
-  [CreateMonitor API endpoint](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateMonitor):
+  [CreateMonitor API endpoint](/tooling/api-info/definition/operations/CreateMonitor):
   Define the resolve window with the `resolve_sustain_secs` field in the
   `series_conditions` object.
 - Observability Platform: In the **Conditions** pane, define the resolve window with
