--- a/investigate/alerts/notifications/notifiers.mdx
+++ b/investigate/alerts/notifications/notifiers.mdx
@@ -111,7 +111,7 @@ spec:
 <Tab title="API" id="view-a-notifier-API">
 
 To complete this action with the Chronosphere API, use the
-[`ListNotifiers`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListNotifiers) endpoint.
+[`ListNotifiers`](/tooling/api-info/definition/operations/ListNotifiers) endpoint.
 
 <ApiAuthReq />
 
@@ -183,7 +183,7 @@ See each notifier type for a full definition example.
 <Tab title="API" id="create-a-notifier-API">
 
 To complete this action with the Chronosphere API, use the
-[`CreateNotifier`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateNotifier) endpoint.
+[`CreateNotifier`](/tooling/api-info/definition/operations/CreateNotifier) endpoint.
 
 <ApiAuthReq />
 
@@ -262,7 +262,7 @@ To edit a notifier using [Terraform](/tooling/infrastructure/terraform):
 <Tab title="API" id="update-a-notifier-API">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateNotifier`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateNotifier) endpoint.
+[`UpdateNotifier`](/tooling/api-info/definition/operations/UpdateNotifier) endpoint.
 
 <ApiAuthReq />
 
@@ -312,7 +312,7 @@ Replace _`SLUG`_ with the slug of the notifier you want to delete.
 <Tab title="API" id="delete-a-notifier-API">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteNotifier`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteNotifier) endpoint.
+[`DeleteNotifier`](/tooling/api-info/definition/operations/DeleteNotifier) endpoint.
 
 <ApiAuthReq />
 
