--- a/investigate/alerts/notifications/notifiers/discard.mdx
+++ b/investigate/alerts/notifications/notifiers/discard.mdx
@@ -72,7 +72,7 @@ To create a discard notifier using [Terraform](/tooling/infrastructure/terraform
 <Tab title="API" id="discard-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateNotifier`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateNotifier)
+[`CreateNotifier`](/tooling/api-info/definition/operations/CreateNotifier)
 endpoint.
 
 <ApiAuthReq />
