--- a/investigate/alerts/notifications/notifiers/incident.mdx
+++ b/investigate/alerts/notifications/notifiers/incident.mdx
@@ -135,7 +135,7 @@ To create a webhook notifier for incident.io:
 <Tab title="API" id="indcident-API">
 
 To complete this action with the Chronosphere API, use the `webhook` object in the
-[`CreateNotifier`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateNotifier) endpoint.
+[`CreateNotifier`](/tooling/api-info/definition/operations/CreateNotifier) endpoint.
 
 <ApiAuthReq />
 
