--- a/investigate/alerts/notifications/notifiers/pagerduty.mdx
+++ b/investigate/alerts/notifications/notifiers/pagerduty.mdx
@@ -207,7 +207,7 @@ in the PagerDuty documentation for more information.
 <Tab title="API" id="pagerduty-API">
 
 To complete this action with the Chronosphere API, use the `pagerduty` object in the
-[`CreateNotifier`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateNotifier) endpoint.
+[`CreateNotifier`](/tooling/api-info/definition/operations/CreateNotifier) endpoint.
 
 <ApiAuthReq />
 
