--- a/investigate/analyze/usage.mdx
+++ b/investigate/analyze/usage.mdx
@@ -92,8 +92,8 @@ chronoctl metric-usages-by-metric-name list
 <Tab title="API" id="view-metrics-data-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListMetricUsagesByLabelName`](https://docs.chronosphere.io/tooling/api-info/state_definition/operations/ListMetricUsagesByLabelName)
-or [`ListMetricUsagesByMetricName`](https://docs.chronosphere.io/tooling/api-info/state_definition/operations/ListMetricUsagesByMetricName)
+[`ListMetricUsagesByLabelName`](/tooling/api-info/state_definition/operations/ListMetricUsagesByLabelName)
+or [`ListMetricUsagesByMetricName`](/tooling/api-info/state_definition/operations/ListMetricUsagesByMetricName)
 endpoints.
 
 For example, the following command returns metrics by name that match the glob
