--- a/investigate/querying/metrics/derived-telemetry/derived-labels.mdx
+++ b/investigate/querying/metrics/derived-telemetry/derived-labels.mdx
@@ -62,7 +62,7 @@ chronoctl derived-labels list --slugs slug_name_1,slug_name_2
 <Tab title="API" id="api-derived-label">
 
 To complete this action with the Chronosphere API, use the
-[`ListDerivedLabels`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListDerivedLabels) endpoint.
+[`ListDerivedLabels`](/tooling/api-info/definition/operations/ListDerivedLabels) endpoint.
 
 <ApiAuthReq />
 
@@ -139,7 +139,7 @@ completed derived label definition.
 <Tab title="API" id="api-derived-label-create">
 
 To complete this action with the Chronosphere API, use the
-[`CreateDerivedLabel`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateDerivedLabel) endpoint.
+[`CreateDerivedLabel`](/tooling/api-info/definition/operations/CreateDerivedLabel) endpoint.
 
 <ApiAuthReq />
 
@@ -410,7 +410,7 @@ Replace _`SLUG`_ with the slug of the derived label you want to delete.
 <Tab title="API" id="api-derived-label-delete">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteDerivedLabel`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListDerivedLabel) endpoint.
+[`DeleteDerivedLabel`](/tooling/api-info/definition/operations/ListDerivedLabel) endpoint.
 
 <ApiAuthReq />
 
