--- a/investigate/querying/metrics/derived-telemetry/derived-metrics.mdx
+++ b/investigate/querying/metrics/derived-telemetry/derived-metrics.mdx
@@ -38,7 +38,7 @@ chronoctl derived-metrics list --slugs slug_name_1,slug_name_2
 <Tab title="API" id="api-view-derived-metrics">
 
 To complete this action with the Chronosphere API, use the
-[`ListDerivedMetric`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListDerivedMetric) endpoint.
+[`ListDerivedMetric`](/tooling/api-info/definition/operations/ListDerivedMetric) endpoint.
 
 <ApiAuthReq />
 
@@ -146,7 +146,7 @@ resource "chronosphere_derived_metric" "my-derived-metric" {
 <Tab title="API" id="create-a-derived-metric-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateDerivedMetric`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateDerivedMetric) endpoint.
+[`CreateDerivedMetric`](/tooling/api-info/definition/operations/CreateDerivedMetric) endpoint.
 
 <ApiAuthReq />
 
@@ -194,7 +194,7 @@ To delete a derived metric with [Terraform](/tooling/infrastructure/terraform):
 <Tab title="API" id="delete-a-derived-metric-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteDerivedMetric`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteDerivedMetric) endpoint.
+[`DeleteDerivedMetric`](/tooling/api-info/definition/operations/DeleteDerivedMetric) endpoint.
 
 <ApiAuthReq />
 
