--- a/tooling/api-info/definition.mdx
+++ b/tooling/api-info/definition.mdx
@@ -1,4 +1,4 @@
 ---
 title: Config endpoint reference
-url: https://docs.chronosphere.io/tooling/api-info/definition
+url: /tooling/api-info/definition
 ---
