--- a/tooling/api-info/state_definition.mdx
+++ b/tooling/api-info/state_definition.mdx
@@ -1,4 +1,4 @@
 ---
 title: State endpoint reference
-url: https://docs.chronosphere.io/tooling/api-info/state_definition
+url: /tooling/api-info/state_definition
 ---
