--- a/administer/accounts-teams/service-accounts.mdx
+++ b/administer/accounts-teams/service-accounts.mdx
@@ -64,7 +64,7 @@ chronoctl service-accounts list --output=json
 <Tab title="API" id="view-service-accounts-api">
 
 To complete this action with the Chronosphere API, use the
-[`ListServiceAccounts`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListServiceAccounts) endpoint.
+[`ListServiceAccounts`](/tooling/api-info/definition/operations/ListServiceAccounts) endpoint.
 
 <ApiAuthReq />
 
@@ -243,7 +243,7 @@ jq '.resources[] | select(.type=="chronosphere_service_account")' terraform.tfst
 <Tab title="API" id="create-an-unrestricted-service-account-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateServiceAccount`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateServiceAccount) endpoint
+[`CreateServiceAccount`](/tooling/api-info/definition/operations/CreateServiceAccount) endpoint
 and update the `service_account.unrestricted` key.
 
 <ApiAuthReq />
@@ -450,7 +450,7 @@ jq '.resources[] | select(.type=="chronosphere_service_account")' terraform.tfst
 <Tab title="API" id="create-a-restricted-service-account-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateServiceAccount`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateServiceAccount) endpoint.
+[`CreateServiceAccount`](/tooling/api-info/definition/operations/CreateServiceAccount) endpoint.
 
 <ApiAuthReq />
 
@@ -519,7 +519,7 @@ chronoctl service-accounts delete tenant-name
 <Tab title="API" id="delete-a-service-account-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteServiceAccount`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteServiceAccount) endpoint.
+[`DeleteServiceAccount`](/tooling/api-info/definition/operations/DeleteServiceAccount) endpoint.
 
 <ApiAuthReq />
 
