--- a/administer/accounts-teams/teams.mdx
+++ b/administer/accounts-teams/teams.mdx
@@ -222,7 +222,7 @@ the `user_emails` array. For details, see [Service Accounts](/administer/account
 <Tab title="API">
 
 To complete this action with the Chronosphere API, use the
-[`CreateTeam`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateTeam) endpoint.
+[`CreateTeam`](/tooling/api-info/definition/operations/CreateTeam) endpoint.
 
 <ApiAuthReq />
 
@@ -314,7 +314,7 @@ resource using Terraform.
 <Tab title="API">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateTeam`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateTeam) endpoint.
+[`UpdateTeam`](/tooling/api-info/definition/operations/UpdateTeam) endpoint.
 
 <ApiAuthReq />
 
@@ -507,7 +507,7 @@ chronoctl teams delete dbas
 <Tab title="API">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteTeam`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteTeam) endpoint.
+[`DeleteTeam`](/tooling/api-info/definition/operations/DeleteTeam) endpoint.
 
 <ApiAuthReq />
 
