--- a/control/consumption/shape-logs/control-logs.mdx
+++ b/control/consumption/shape-logs/control-logs.mdx
@@ -74,7 +74,7 @@ control rule's Terraform representation.
 <Tab title="API" id="view-control-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`ReadLogControlConfig`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ReadLogControlConfig)
+[`ReadLogControlConfig`](/tooling/api-info/definition/operations/ReadLogControlConfig)
 endpoint.
 
 <ApiAuthReq />
@@ -270,7 +270,7 @@ See the [Terraform example](#terraform-example) for more information.
 <Tab title="API" id="create-control-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`CreateLogControlConfig`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateLogControlConfig)
+[`CreateLogControlConfig`](/tooling/api-info/definition/operations/CreateLogControlConfig)
 endpoint.
 
 <ApiAuthReq />
@@ -503,7 +503,7 @@ Terraform representation.
 <Tab title="API" id="edit-control-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`UpdateLogControlConfig`](https://docs.chronosphere.io/tooling/api-info/definition/operations/UpdateLogControlConfig)
+[`UpdateLogControlConfig`](/tooling/api-info/definition/operations/UpdateLogControlConfig)
 endpoint.
 
 <ApiAuthReq />
@@ -550,7 +550,7 @@ chronoctl log-control-config delete
 <Tab title="API" id="delete-control-rules-api">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteLogControlConfig`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteLogControlConfig)
+[`DeleteLogControlConfig`](/tooling/api-info/definition/operations/DeleteLogControlConfig)
 endpoint.
 
 <ApiAuthReq />
