--- a/investigate/alerts/muting-rules.mdx
+++ b/investigate/alerts/muting-rules.mdx
@@ -91,7 +91,7 @@ spec:
 <Tab title="API" id="list-muting-API">
 
 To complete this action with the Chronosphere API, use the
-[`ListMutingRules`](https://docs.chronosphere.io/tooling/api-info/definition/operations/ListMutingRules) endpoint.
+[`ListMutingRules`](/tooling/api-info/definition/operations/ListMutingRules) endpoint.
 
 <ApiAuthReq />
 
@@ -224,7 +224,7 @@ chronoctl muting-rules create --starts-at "2021-09-07T11:49:35Z" --ends-at "2021
 <Tab title="API" id="create-muting-API">
 
 To complete this action with the Chronosphere API, use the
-[`CreateMutingRule`](https://docs.chronosphere.io/tooling/api-info/definition/operations/CreateMutingRule) endpoint.
+[`CreateMutingRule`](/tooling/api-info/definition/operations/CreateMutingRule) endpoint.
 
 <ApiAuthReq />
 
@@ -376,7 +376,7 @@ Replace _`SLUG`_ with the rule's slug, such as `3021f691-a0bf-4bdd-a4c8-f8468e5b
 <Tab title="API" id="delete-muting-API">
 
 To complete this action with the Chronosphere API, use the
-[`DeleteMutingRule`](https://docs.chronosphere.io/tooling/api-info/definition/operations/DeleteMutingRule) endpoint.
+[`DeleteMutingRule`](/tooling/api-info/definition/operations/DeleteMutingRule) endpoint.
 
 <ApiAuthReq />
 
