--- a/tooling/api-info/dashboard_schema.mdx
+++ b/tooling/api-info/dashboard_schema.mdx
@@ -1,4 +1,4 @@
 ---
 title: Standard dashboard config reference
-url: https://docs.chronosphere.io/tooling/api-info/dashboard_schema
+url: /tooling/api-info/dashboard_schema
 ---
