--- a/tooling/api-info/data_definition.mdx
+++ b/tooling/api-info/data_definition.mdx
@@ -1,4 +1,4 @@
 ---
 title: Data endpoint reference
-url: https://docs.chronosphere.io/tooling/api-info/data_definition
+url: /tooling/api-info/data_definition
 ---
